--- a/week-2/02-nodejs/package.json
+++ b/week-2/02-nodejs/package.json
@@ -2,7 +2,7 @@
   "name": "02-nodejs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "todoServer.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "test-fileServer": "./node_modules/jest/bin/jest.js ./tests/fileServer.test.js",
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^29.5.0",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
   },
   "jest": {
@@ -20,6 +21,6 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.1"
   }
 }
